--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cash Register Manager</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -48,7 +48,7 @@
      </div>
      <footer class="footer ">
       <div class="footer-header">Social Media</div>
-      <ul class="social-links non-bul">
+      <ul class=" non-bul">
         <li class="list-inline">
           <a class="links" href="https://twitter.com/Nithin_Nikhil12"
             >Twitter</a
