--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
     <div class="div1">Enter the bill amount and cash given by the customer and know minimum number of notes to return.</div>
     <div class="container">
         <div class="div2">Bill Amount:</div>
-        <input id="billamount" class="input1" type="text">
+        <input id="billamount" class="input1" type="number">
         <div class="div2">Cash Given:</div>
-        <input id="cashgiven" class="input1" type="text">
+        <input id="cashgiven" class="input1" type="number">
         <button id="checkbutton" class="btn1">Check</button>
     </div>
-     
-     
-    <div id="msg" class="div1" ></div>
+     <div id="msg" class="div1" ></div>
           <table class="table1">
             <caption>
               Return Change
